# Email-AI-Asistant

./: .env.example  LICENSE  README.md  pyproject.toml
docs/: _config.yml  architecture.md  index.md  workflow.md
docs/ghp/: architecture.md  components.md  data-flow.md  index.md
docs/guides/: gmail-oauth.md  index.md  user-guide.md
scripts/: run_mvp.py
src/email_ai_assistant/: __init__.py  config.py  gmail_client.py  reporting.py
src/email_ai_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/email_ai_assistant/analyzers/: recruiter.py  subscriptions.py
tests/: test_recruiter_analyzer.py  test_reporting.py  test_subscriptions_analyzer.py
workflows/: recruiter_insights.json
